ircbot/ircbot_Deployment_ircbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ircbot
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: ircbot
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: ircbot
    spec:
      containers:
      - image: harbor.ocf.berkeley.edu/ocf/ircbot/ircbot:0b604f3c67778c42ee05e644962aba3708f26241
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 8888
        volumeMounts:
        - mountPath: /etc/ocf-ircbot
          name: config
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - name: config
        secret:
          secretName: ircbot
