ircbot/ircbot_Service_ircbot.yaml
apiVersion: v1
kind: Service
metadata:
  name: ircbot
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    transpire.ocf.io/deployment: ircbot
