ircbot/ircbot_Ingress_ircbot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: ircbot
spec:
  ingressClassName: contour
  rules:
  - host: ircbot.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ircbot
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ircbot.ocf.berkeley.edu
    secretName: ircbot-tls
